Урок 5: Реализация вторичных слайдеров (меньших размеров)
Файлы:
  modified:   src/js/main.js
  modified:   src/js/modules/slider/slider.js
  modified:   src/js/modules/slider/slider-main.js
  modified:   src/assets/css/style.css
  modified:   src/index.html

  new file:   src/js/modules/slider/slider-mini.js

--- a/docs/assets/sass/_modules.sass
+++ b/docs/assets/sass/_modules.sass
@@ -23,7 +23,7 @@
             margin-top: 30px
         .subtitle
             margin-top: 28px
-            color: #000000;
+            color: #000000
             mix-blend-mode: normal
             opacity: 0.5
             line-height: 20px
