--- a/src/assets/sass/_modules.sass
+++ b/src/assets/sass/_modules.sass
@@ -23,7 +23,7 @@
             margin-top: 30px
         .subtitle
             margin-top: 28px
-            color: #000000;
+            color: #000000
             mix-blend-mode: normal
             opacity: 0.5
             line-height: 20px
